avoid text overflow

--- a/style.css
+++ b/style.css
@@ -41,6 +41,16 @@ picture {
   display: block;
 }
 
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+}
+
 body {
   margin: 0;
   font-family: "Red Hat Display", sans-serif;
